updated css alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,85 @@
+@import url("reset.css") screen;
 @import url("animation.css") screen;
-
-/* Responsive for Tablets and Monitors */
-@media screen and (max-width: 980) {
-	html {
-   	padding: 15px;
-      margin: 15px;
-      height: 100%;
-      width: 99%;
-      display: table;
-	}
-
-	body {
-      display: table-row;
-	}
-}
 
 #container {
    padding: 15px;
-   /*font-size: 12px;*/
+   font-size: 12px;
    margin: 15px;
-	display: table-cell;
-	border: solid black;
+}
+
+body {
+   background-image: url('background.jpg');
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-position: center;
+   position: relative;
+}
+
+h3 {
+   font-size: 1.4em;
+   font-weight: bold;
+}
+
+h4 {
+   font-size: 1.2em;
 }
 
 header {
 	text-align: center;
-	border: solid black;
+	/*border: solid black;*/
+}
+
+header h1 {
+   font-size: 3em;
+   font-weight: bold;
+}
+
+header h2 {
+   font-size: 2em;
 }
 
 nav {
+   padding: 15px;
+   margin: 15px;
 	text-align: center;
 	/*border: solid black;*/
 }
 
 nav li {
+   padding: 5px;
+   margin: 5px;
 	display: inline;
+   font-size: 1.6em;
+}
+
+nav a {
+   text-decoration: none;
+}
+
+nav li:hover {
+   background-color: #060;
 }
 
 /* CSS Cycling Slideshow */
 #content-slider {
    width: 100%;
    height: 100%;
-   margin: 10px auto 0;
 }
 
 #slider {
-   /*background: #000;*/
-   border: 5px solid #eaeaea;
+   border: 1px solid #eaeaea;
    box-shadow: 1px 1px 5px rgba(0,0,0,0.7);
    max-height: 100%;
    max-width: 100%;
-   padding: 15px;
-   margin: 15px auto 0;
+   padding: 5px;
+   margin: 5px auto 0;
    overflow: visible;
    position: relative;
 }
 
 #mask {
 	overflow: hidden;
-	height: 220px;
+	height: 150px;
 }
 
 #slider ul {
@@ -149,30 +170,31 @@ nav li {
 #content {
    padding: auto;
    width: 100%;
-	border: solid black;
+	/*border: solid black;*/
 }
 
 #news {
 	float: left;
    height: 100%;
-	width: 60%;
+	max-width: 60%;
    padding: 15px;
-	border: solid black;
+	/*border: solid black;*/
 	overflow: auto;
+   font-size: 1.3em;
 }
 
 #side {
 	display: inline-block;
    text-align: center;
    padding: 15px;
-	border: solid black;
-	width: 30%;
+	/*border: solid black;*/
+	max-width: 30%;
 }
 
 #recipe {
    margin: 15px;
    padding: 15px;
-   border: solid black;
+   /*border: solid black;*/
 }
 
 #recipe img {
@@ -183,7 +205,7 @@ nav li {
 #ads {
    width: 100%;
    height: 100%;
-   border: solid black;
+   /*border: solid black;*/
 }
 
 #ads img {
@@ -196,15 +218,15 @@ nav li {
    width: 99.55%;
    text-align: center;
    overflow: auto;
-   border: solid black;
+   /*border: solid black;*/
 }
 
 #staff {
-   margin: 15px;
-   padding: 15px;
+   margin: 10px;
+   padding: 10px;
    float: left;
-   width: 26%;
-   border: solid black;
+   width: 30%;
+   /*border: solid black;*/
 }
 
 #staff img {
@@ -218,29 +240,27 @@ nav li {
 }
 
 #poll {
-   /*float: center;*/
    display: inline-block;
-   margin: 15px;
-   padding: 15px;
-   max-width: 26%;
-   border: solid black;
+   margin: 10px;
+   padding: 10px;
+   width: 27%;
+   /*border: solid black;*/
+   float: left;
    overflow: auto;
 }
 
 #list {
-   margin: 15px;
-   padding: 15px;
-   float: right;
-   width: 26%;
-   border: solid black;
+   margin: 10px;
+   padding: 10px;
+   float: left;
+   width: 27%;
+   /*border: solid black;*/
 }
 
 footer {
    clear: both;
    width: 99%;
-   border: solid black;
-}
-
-footer span {
-   margin-left: 250px;
+   font-size: 1.6em;
+   text-align: center;
+   /*border: solid black;*/
 }
